plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.plugin.compose'
}

android {
    packagingOptions {
        resources.excludes += "META-INF/*"
    }

    namespace = 'com.mapleserver'
    compileSdk 35

    defaultConfig {
        applicationId "com.mapleserver"
        minSdkVersion 31
        targetSdkVersion 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary = true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    kotlinOptions {
        jvmTarget = '21'
        allWarningsAsErrors = false
    }
    buildFeatures {
        compose = true
    }
    composeOptions {
        kotlinCompilerExtensionVersion = '1.5.15'
    }
    packaging {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
    testOptions {
        unitTests.includeAndroidResources = true
    }

    tasks.withType(Test) {
        useJUnitPlatform()
    }
}

dependencies {

    implementation "androidx.navigation:navigation-compose:2.7.4"
    implementation 'androidx.core:core-ktx:1.15.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
    implementation 'androidx.activity:activity-compose:1.7.2'
    implementation 'androidx.compose.material3:material3:1.3.1'
    implementation platform('androidx.compose:compose-bom:2023.03.00')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    implementation "com.anggrayudi:storage:1.5.5"
    implementation 'androidx.work:work-runtime-ktx:2.8.1'
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.22"
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'
    // Logging facade
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation group: 'com.github.tony19', name: 'logback-android', version: '3.0.0'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.16.1'

    // Networking (Netty)
    implementation 'io.netty:netty-all:4.1.100.Final'

    // Config file (YamlBeans)
    implementation 'com.esotericsoftware.yamlbeans:yamlbeans:1.15'

    // Annotations for concurrency documentation (JCIP Annotations)
    implementation 'net.jcip:jcip-annotations:1.0'

    // Database connection pool (HikariCP)
    implementation 'com.zaxxer:HikariCP:5.0.1'

    // MySQL JDBC driver (mysql-connector-java)
    implementation 'mysql:mysql-connector-java:8.0.32'

    // Convenience wrapper around JDBC (jdbi)
    implementation 'org.jdbi:jdbi3-core:3.37.1'

    // Unit test (JUnit)
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'

    // Unit test (Mockito)
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'

    implementation 'io.apisense:rhino-android:1.1.1'

//    implementation files('libs/jsr223.jar')

    implementation files('libs/jmx-1.2.1.jar')
}